--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -2,9 +2,9 @@ name: release
 on:
   pull_request:
     branches:
-    - main
+      - main
     types:
-    - closed
+      - closed
 jobs:
   release-please:
     permissions: write-all
@@ -20,9 +20,5 @@ jobs:
       # Publish
       - name: publish gem
         run: |
-          gem install gemfury -v 0.12.0
-          touch $HOME/.netrc
-          chmod 0600 $HOME/.netrc
-          printf "machine api.fury.io\n  login udai.gupta@bigbinary.com\n  password ${{ secrets.GEMFURY_API_KEY }}\nmachine git.fury.io\n  login udai.gupta@bigbinary.com\n  password ${{ secrets.GEMFURY_API_KEY }}\n" > $HOME/.netrc
-          gem build
-          fury push *.gem --as neeto-live
+          gem build -o rubocop-neeto.gem
+          gem push rubocop-neeto.gem
