--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -19,6 +19,12 @@ jobs:
       - run: bundle install
       # Publish
       - name: publish gem
+        env:
+          RUBYGEMS_TOKEN: secrets.RUBYGEMS_TOKEN
         run: |
-          gem build -o rubocop-neeto.gem
-          gem push rubocop-neeto.gem
+          mkdir -p $HOME/.gem
+          touch $HOME/.gem/credentials
+          chmod 0600 $HOME/.gem/credentials
+          printf -- "---\n:rubygems_api_key: ${RUBYGEMS_TOKEN}\n" > $HOME/.gem/credentials
+          gem build *.gemspec
+          gem push *.gem
