--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -20,11 +20,7 @@ jobs:
       # Publish
       - name: publish gem
         env:
-          RUBYGEMS_TOKEN: secrets.RUBYGEMS_TOKEN
+          GEM_HOST_API_KEY: secrets.RUBYGEMS_TOKEN
         run: |
-          mkdir -p $HOME/.gem
-          touch $HOME/.gem/credentials
-          chmod 0600 $HOME/.gem/credentials
-          printf -- "---\n:rubygems_api_key: ${RUBYGEMS_TOKEN}\n" > $HOME/.gem/credentials
           gem build *.gemspec
           gem push *.gem
