--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -20,7 +20,7 @@ jobs:
       # Publish
       - name: publish gem
         env:
-          GEM_HOST_API_KEY: secrets.RUBYGEMS_TOKEN
+          GEM_HOST_API_KEY: ${{ secrets.RUBYGEMS_TOKEN }}
         run: |
           gem build *.gemspec
           gem push *.gem
